# AIDeckPP

./: .gitignore  LICENSE  README.md  README_AI.md  ReferenceSheet.md  inspect_line_lengths.py  inspect_shapes.py  inspect_template_slide.py  pyproject.toml
Inspects/: __init__.py  calib_inspector.py  compare_inspector.py  layout_inspector.py  main.py  shape_inspector.py  template_inspector.py
deck2pptx/: __init__.py  __main__.py  adapters.py  asciidoc_adapter.py  errors.py  height_estimator.py  height_estimator_old.py  inspect.py  inspect_template.py  layout.py  markdown_adapter.py  mermaid_handler.py  models.py  render_context.py  render_utils.py  renderer.py  spec.py  text_utils.py  theme.py  validation.py  yaml_adapter.py
deck2pptx/element_renderers/: __init__.py  code.py  comparison.py  flow.py  image.py  quote.py  split.py  table.py  text.py  tree.py
deck2pptx/themes/: default.ini
docs/: ai-authoring.md  release-verification.md  source-baseline.md
scripts/: check_source_hygiene.ps1  create_dummy_image.py  verify_release.ps1
tests/: test_asciidoc_adapter.py  test_auto_calib.py  test_business_elements.py  test_image_gallery.py  test_overlap.py  test_renderer.py  test_split_panel.py  test_table_renderer.py  test_templates.py  test_text_renderer.py  test_text_utils.py  test_validation.py  test_visual_export.py
tests/fixtures/: missing_image.deck.yaml  multi_error.deck.yaml  portrait.deck.yaml  reordered_flow.deck.yaml
tests/fixtures/nested/: fixture.deck.yaml
